perf: perf delete protoduct sqlc logic
